--- a/styles/style.css
+++ b/styles/style.css
@@ -550,56 +550,42 @@ img {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-
-.relative-parent {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
-}
-.relative-parent .absolute-child {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  -webkit-box-shadow: 5px 5px 5px lightgrey;
-          box-shadow: 5px 5px 5px lightgrey;
-}
-.relative-parent .absolute-child img {
-  padding: 8px;
-  width: 25px;
-  height: auto;
+.plant-list ul img {
+  margin-bottom: 40px;
 }
 
-#inventory li button {
-  display: inline-block;
-  margin: 10px 5px;
-  top: 0px;
-  right: 0px;
-}
-
-#inventory button {
-  text-align: center;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
+.likeButton {
   cursor: pointer;
-  font-size: 30px;
+  font-size: 35px;
   background: transparent;
   border: none;
-  color: black;
-  line-height: 1.6;
+  color: lightgrey;
+  position: relative;
+  bottom: 350px;
+  right: -250px;
 }
 
-#inventory button:disabled {
+.addButton {
+  background: transparent;
+  position: relative;
+  bottom: 130px;
+  left: -30px;
+  -webkit-box-shadow: 5px 5px 5px lightgrey;
+          box-shadow: 5px 5px 5px lightgrey;
+  padding: 8px;
+  width: 40px;
+  height: 40px;
+  margin-bottom: 20px;
+}
+
+.likeButton:disabled {
   color: lightgray;
   cursor: auto;
 }
 
-#inventory button:hover:not([disabled]),
-#inventory button:focus {
+.likeButton:active,
+.likeButton:hover:not([disabled]),
+.likeButton:focus {
   color: palevioletred;
 }
 
