--- a/styles/sass/_pay-info.scss
+++ b/styles/sass/_pay-info.scss
@@ -11,6 +11,11 @@ $faintblue: #88cce2;
 
     .wrapper {
         display: flex;
+        background: url(../assets/header.png);
+        background-repeat: no-repeat;
+        background-position: right;
+        padding: 144px 0px;
+
     }
 }
 
@@ -114,10 +119,18 @@ $faintblue: #88cce2;
 
 
 
-@media (max-width: 800px) {
+@media (max-width: 768px) {
 
     .hero-image .wrapper,
     .pay-info .wrapper {
         flex-direction: column;
     }
+
+    .pay-info-container-1,
+    .pay-info-container-2,
+    .pay-info-container-3 {
+         width: 80%;
+        justify-content: center;
+        align-items: center;
+    }    
 }
