--- a/styles/style.css
+++ b/styles/style.css
@@ -327,6 +327,10 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  background: url(../assets/header.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  padding: 144px 0px;
 }
 
 .hero-text-container {
@@ -450,13 +454,24 @@ img {
   font-weight: 300;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 768px) {
   .hero-image .wrapper,
   .pay-info .wrapper {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .pay-info-container-1,
+  .pay-info-container-2,
+  .pay-info-container-3 {
+    width: 80%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 .gallery {
@@ -824,18 +839,66 @@ h2:after {
   padding-top: 30px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   .blog-post-parent {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    width: 600px;
   }
   .blog-post-parent .blog-post-child {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0px;
+    font-size: 1rem;
+  }
+  .blog-post-parent .blog-post-child img {
+    width: 240px;
+  }
+  .text-break {
+    width: 600px;
+  }
+}
+@media (max-width: 680px) {
+  .blog-post-parent {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 50%;
+    -ms-flex-line-pack: center;
+        align-content: center;
+  }
+  .blog-post-parent .blog-post-child {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 320px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    padding: 0px;
+    font-size: 0.8rem;
+    text-align: center;
+  }
+  .blog-post-parent .blog-post-child img {
+    width: 240px;
+  }
+  .text-break {
+    width: 50%;
   }
 }
 footer {
