added responsiveness to collections

--- a/styles/sass/_gallery.scss
+++ b/styles/sass/_gallery.scss
@@ -126,3 +126,10 @@ $faintblue: #88cce2;
   color: palevioletred;
 }
 
+@media (max-width: 614px) {
+    .inventory {
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+    }
+}
