--- a/styles/sass/_collection.scss
+++ b/styles/sass/_collection.scss
@@ -11,20 +11,24 @@ $faintblue: #88cce2;
 
     .collection-parent {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         padding: 10px 0px;
+
     }
 }
 
 .collection-child {
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     display: flex;
     flex-direction: column;
     height: 300px;
     line-height: 1.5;
     justify-content: center;
-    padding: 30px 20px;
+    padding: 0px 20px;
+    margin: 10px 0px;
    
     
     p {
@@ -92,10 +96,26 @@ $faintblue: #88cce2;
     }
 }    
 
-@media (max-width: 800px) {
 
-    .collection-parent {
+@media (max-width: 950px) {
+    .wrapper {
+
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+        }
+ 
+        .collection-parent {
+        display: flex;
         flex-direction: column;
-        width: 100%;
-    }
+        align-content: center;
+        justify-content: center;
+        }
+
+        .collection-child {
+            background-size: stretch;
+            justify-content: center;
+            height: 350px;
+            width: 350px;
+        }
 }
