--- a/styles/sass/_pay-info.scss
+++ b/styles/sass/_pay-info.scss
@@ -124,13 +124,13 @@ $faintblue: #88cce2;
     .hero-image .wrapper,
     .pay-info .wrapper {
         flex-direction: column;
+        align-content: center;
     }
 
     .pay-info-container-1,
     .pay-info-container-2,
     .pay-info-container-3 {
          width: 80%;
-        justify-content: center;
-        align-items: center;
+
     }    
 }
