added media queries to blog, collections, pay-info

--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -99,6 +99,9 @@ h2:after {
     padding-top: 30px;
 }
 
+
+// responsiveness media queries
+
 @media (max-width: 1000px) {
     .blog-post-parent {
         flex-direction: column;
