--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -66,11 +66,11 @@ button {
   
   }
 
-// .sup {
-//     position: relative;
-//     bottom: 1ex; 
-//     font-size: 80%;
-//   }
+.sup {
+    position: relative;
+    bottom: 1ex; 
+    font-size: 80%;
+  }
 
 .header-nav-container li {
     display: inline-block;
