--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -1,9 +1,4 @@
-$green: #abd373;
-$darkeygrey: #4c4c4c;
-$black: #000;
-$lightgrey: #f6f7fb;
-$white: #fff;
-$faintblue: #88cce2;
+@import 'color-scheme';
 
 .blog-head {
     background: $white;
@@ -102,7 +97,7 @@ h2:after {
 
 // responsiveness media queries
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
     .blog-post-parent {
         flex-direction: column;
         width: 600px;
@@ -113,11 +108,13 @@ h2:after {
             width: 100%;
             justify-content: center;
             align-items: center;
-            padding: 0px;
+            padding: 20px;
             font-size: 1rem;
                     
+
             img {          
-                width: 240px;
+                width: 200px;
+                padding: 20px;
             }
         }
     }
