--- a/styles/sass/_pay-info.scss
+++ b/styles/sass/_pay-info.scss
@@ -1,9 +1,4 @@
-$green: #abd373;
-$darkeygrey: #4c4c4c;
-$black: #000;
-$lightgrey: #f6f7fb;
-$white: #fff;
-$faintblue: #88cce2;
+@import 'color-scheme';
 
 .hero-image {
     background: #f8eee5;
@@ -32,6 +27,7 @@ $faintblue: #88cce2;
         font-size: 50px;
         font-weight: 300;
         text-transform: uppercase;
+        text-shadow: $white 2px 2px 5px;
     }
 
     #hero-text-emphasis {
@@ -43,6 +39,7 @@ $faintblue: #88cce2;
     p {
         margin: 0px;
         font-size: 25px;
+        text-shadow: $white 2px 2px 5px;
     }
 }
 
@@ -119,7 +116,7 @@ $faintblue: #88cce2;
 
 // responsiveness media queries
 
-@media (max-width: 768px) {
+@media (max-width: 975px) {
 
     .hero-image .wrapper,
     .pay-info .wrapper {
@@ -131,6 +128,12 @@ $faintblue: #88cce2;
     .pay-info-container-2,
     .pay-info-container-3 {
          width: 80%;
-
     }    
+
+    .hero-text-container {
+        h1,
+        p {
+            text-shadow: $white 2px 2px 5px;
+        }
+    }
 }
