--- a/styles/style.css
+++ b/styles/style.css
@@ -372,6 +372,7 @@ button {
   font-size: 50px;
   font-weight: 300;
   text-transform: uppercase;
+  text-shadow: #fff 2px 2px 5px;
 }
 .hero-text-container #hero-text-emphasis {
   display: block;
@@ -381,6 +382,7 @@ button {
 .hero-text-container p {
   margin: 0px;
   font-size: 25px;
+  text-shadow: #fff 2px 2px 5px;
 }
 
 .hero-button {
@@ -471,7 +473,7 @@ button {
   font-weight: 300;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 975px) {
   .hero-image .wrapper,
   .pay-info .wrapper {
     -webkit-box-orient: vertical;
@@ -485,6 +487,10 @@ button {
   .pay-info-container-2,
   .pay-info-container-3 {
     width: 80%;
+  }
+  .hero-text-container h1,
+  .hero-text-container p {
+    text-shadow: #fff 2px 2px 5px;
   }
 }
 .gallery {
@@ -577,9 +583,8 @@ button {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-}
-.plant-list ul img {
-  margin-bottom: 40px;
+  -ms-flex-line-pack: center;
+      align-content: center;
 }
 
 .likeButton {
@@ -618,15 +623,24 @@ button {
 }
 
 @media (max-width: 614px) {
-  .inventory {
+  .inventory ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     -ms-flex-line-pack: center;
         align-content: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+  }
+}
+@media (max-width: 600px) {
+  .product-buttons-section {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .product-buttons-section button {
+    width: 150px;
   }
 }
 .collection {
@@ -893,7 +907,7 @@ h2:after {
   padding-top: 30px;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
   .blog-post-parent {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -913,11 +927,12 @@ h2:after {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding: 0px;
+    padding: 20px;
     font-size: 1rem;
   }
   .blog-post-parent .blog-post-child img {
-    width: 240px;
+    width: 200px;
+    padding: 20px;
   }
   .text-break {
     width: 600px;
