--- a/styles/sass/_pay-info.scss
+++ b/styles/sass/_pay-info.scss
@@ -131,6 +131,9 @@ $faintblue: #88cce2;
     .pay-info-container-2,
     .pay-info-container-3 {
          width: 80%;
+         margin-bottom: 20px;
 
     }    
+
+    
 }
