--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -142,9 +142,11 @@ h2:after {
             padding: 0px;
             font-size: 0.8rem;
             text-align: center;
+            margin-bottom: 20px;
 
             img {
                 width: 240px;
+                padding-bottom: 20px;
             }
         }
     }
