--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -62,7 +62,7 @@
 .main-menu {
     display: flex;
     justify-content: space-between;
-    margin: 0;;
+    margin: 0;
 
     a {
         padding: 0px 15px;
@@ -151,6 +151,4 @@ button {
             .main-menu.show {
                 display: flex;
                 }
-    
-    
-        }
+}
