--- a/styles/sass/_blog.scss
+++ b/styles/sass/_blog.scss
@@ -109,6 +109,7 @@ h2:after {
             justify-content: center;
             align-items: center;
             padding: 20px;
+            margin: 10px 0;
             font-size: 1rem;
                     
 
