--- a/styles/style.css
+++ b/styles/style.css
@@ -995,6 +995,7 @@ h2:after {
         -ms-flex-align: center;
             align-items: center;
     padding: 20px;
+    margin: 10px 0;
     font-size: 1rem;
   }
   .blog-post-parent .blog-post-child img {
